--- a/src/app/regular-list/all-list/all-list.component.html
+++ b/src/app/regular-list/all-list/all-list.component.html
@@ -1,7 +1,8 @@
 <div class="fund-table-wrapper">
   <div class="heading-section">
-    <div class="row">
-      <div class="detail-head-wrapper">
+    <div class="detail-head-wrapper">
+      <div class="row">
+      
         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
           <ul class="">
@@ -25,7 +26,7 @@
         </div>
         <div class="col-md-3">
           <p>เลขที่ผู้ถือหน่วยลงทุน</p>
-          <div class="select-wrapper inline-block">
+          <div class="select-wrapper inline-block pb-3">
             <select name="ddlLink" id="ddlLink">
               <option value="0" selected="">9990244757</option>
               <option value="36">9990244757</option>
@@ -43,8 +44,17 @@
           <p>วันที่ออกรายการ</p>
           <span>7 มิถุนายน 2561</span>
         </div>
+        
       </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6">
+
+            <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
     </div>
+    </div>
+    
   </div>
 
   <div class="detail-body-wrapper">
@@ -57,9 +67,7 @@
           <table class="table table-nav">
             <thead>
                 <tr>
-                    <th>
-                      ช่องทาง
-                    </th>
+                    
                     <th>
                       แก้ไข
                       <br/>ครั้งล่าสุด
@@ -106,9 +114,7 @@
                 <!-- <td colspan="6">&nbsp;</td> -->
               </tr>
               <tr>
-                <td class="text-left">
-                  NET
-                </td>
+                
                 <td class="">
                   07/06/2561, 11:25
                 </td>
@@ -148,9 +154,7 @@
                 <!-- <td colspan="6">&nbsp;</td> -->
               </tr>
               <tr>
-                <td class="text-left">
-                  NET
-                </td>
+                
                 <td class="">
                   07/06/2561, 11:25
                 </td>
