--- a/src/app/report/not-available-list/not-available-list.component.html
+++ b/src/app/report/not-available-list/not-available-list.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-3">
           <p>เลขที่ผู้ถือหน่วยลงทุน</p>
-          <div class="select-wrapper inline-block">
+          <div class="select-wrapper inline-block  pb-3">
             <select name="ddlLink" id="ddlLink">
               <option value="0" selected="">9990244757</option>
               <option value="36">9990244757</option>
@@ -43,6 +43,15 @@
           <p>วันที่ออกรายการ</p>
           <span>7 มิถุนายน 2561</span>
         </div>
+        <div class="col-sm-6 col-md-12">
+            <div class="row">
+              <div class="col-md-6">
+                <p>ที่อยู่</p>
+              <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+              </div>
+            </div>
+              
+          </div>
 
         <div class="col-md-12">
           <div class="table-responsive">
