--- a/src/app/report/past-events/past-events.component.html
+++ b/src/app/report/past-events/past-events.component.html
@@ -38,6 +38,11 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+
+            <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
       </div>
     </div>
   </div>
@@ -109,7 +114,7 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <button class="btn-med btn-cancel">
-              ยกเลิก
+              คืนค่า
               <i class="fa fa-angle-right" aria-hidden="true"></i>
 
             </button>
@@ -125,54 +130,30 @@
       <table class="table table-nav">
         <thead>
           <tr>
-            <th rowspan="2">
-              กองทุน / วันที่มีผล
+            <th>
+              วันที่
             </th>
-            <th rowspan="2">
+            <th>
               รายการ
-            </th>
-            <th rowspan="2">
-              จำนวน (บาท)
-            </th>
-            <th rowspan="2">
-              มูลค่า
-              <br/>ต่อหน่วย
-            </th>
-            <th rowspan="2">
-              หน่วยเพิ่มขึ้น /
-              <br/>ลดลง
-            </th>
-            <th rowspan="2">
-              หน่วยคงเหลือ
-            </th>
-            <th rowspan="2">
-              มูลค่าการลงทุน
-              <br/>(บาท)
-            </th>
-            <th colspan="2" class="last-th">
-              หน่วยลงทุนรอการจัดสรร
-            </th>
-
-          </tr>
-          <tr>
+            </th>            
             <th>
-              (หน่วย)
+              มูลค่าต่อหน่วย
             </th>
             <th>
-              (บาท)
-            </th>
+                จำนวนหน่วย
+           </th>           
 
           </tr>
         </thead>
         <tbody>
           <tr class="summary">
-            <th colspan="10">
+            <th colspan="4">
               กองทุนรวมหุ้นระยะยาว
             </th>
           </tr>
 
           <tr class="line">
-            <td colspan="10">
+            <td colspan="4">
               กองทุนที่เน้นตราสารเงิน (KFCASH)
             </td>
           </tr>
@@ -184,17 +165,11 @@
               SUB
             </td>
             <td class="text-right">
-              &nbsp;
-            </td>
-            <td class="text-right">
               11.4523
-            </td>
-            <td class="text-right">
-              &nbsp;
             </td>
             <td class="txt-right">
               110.4523
-            </td>
+            <!-- </td>
             <td class="txt-right">
               17,055.45
             </td>
@@ -203,7 +178,7 @@
             </td>
             <td class="txt-right">
               &nbsp;
-            </td>
+            </td> -->
           </tr>
           <tr>
             <td class="text-left">
@@ -213,18 +188,12 @@
               SUB
             </td>
             <td class="text-right">
-              &nbsp;
-            </td>
-            <td class="text-right">
               11.4523
-            </td>
-            <td class="text-right">
-              &nbsp;
             </td>
             <td class="txt-right">
               110.4523
             </td>
-            <td class="txt-right">
+            <!-- <td class="txt-right">
               17,055.45
             </td>
             <td class="txt-right">
@@ -232,27 +201,16 @@
             </td>
             <td class="txt-right">
               &nbsp;
-            </td>
+            </td> -->
           </tr>
           <tr class="summary">
-            <th colspan="4">
+            <th colspan="3">
               รวม : (กองทุนรวมหุ้นระยะยาว) การลงทุน (บาท) ณ วันที่ 24/07/2561
-            </th>
-            <th class="text-right">
-              &nbsp;
-            </th>
-            <th class="text-right">
-              &nbsp;
             </th>
             <th class="text-right">
               34,110.90
             </th>
-            <th class="text-right">
-              &nbsp;
-            </th>
-            <th class="text-right">
-              &nbsp;
-            </th>
+            
           </tr>
         </tbody>
       </table>
