--- a/src/app/report/receipt-history/receipt-history.component.html
+++ b/src/app/report/receipt-history/receipt-history.component.html
@@ -37,10 +37,15 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+
+            <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
       </div>
     </div>
   </div>
-  <div class="detail-body-wrapper">
+  <!-- <div class="detail-body-wrapper">
     <div class="row">
       <div class="col-md-12">
         <p>กรุณาเลือกกองทุนที่ทำรายการ</p>
@@ -88,7 +93,86 @@
     </div>
 
 
-  </div>
+  </div> -->
+  <div class="detail-body-wrapper">
+      <div class="row">
+        <div class="col-md-12">
+          <p>กรุณาเลือกกองทุนและวันที่ต้องการดูรายการ</p>
+        </div>
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-4">
+              <span>กลุ่มกองทุน</span>
+            </div>
+            <div class="col-md-6">
+              <div class="select-wrapper inline-block">
+                <select name="ddlLink" id="ddlLink">
+                  <option value="0" selected="">แสดงทุกกลุ่ม</option>
+                  <option value="36">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+                  <option value="29">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+  
+            <div class="col-md-4">
+              <span>กองทุน</span>
+            </div>
+            <div class="col-md-6">
+              <div class="select-wrapper inline-block">
+  
+                <select name="ddlLink" id="ddlLink">
+                  <option value="0" selected="">แสดงทุกกองทุน</option>
+                  <option value="36">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+                  <option value="29">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+                </select>
+              </div>
+            </div>
+          </div>
+  
+  
+          <div class="row">
+            <div class="col-md-4">
+              <span>จากวันที่</span>
+            </div>
+            <div class="col-md-6">
+              <div class="input-wrapper">
+                <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <span>ถึงวันที่</span>
+            </div>
+            <div class="col-md-6">
+              <div class="input-wrapper">
+                <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+              </div>
+            </div>
+  
+          </div>
+  
+          <div class="row">
+            <div class="col-md-3 col-xs-6 offset-md-4">
+              <button class="btn-med btn-primary">
+                ตกลง
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+  
+              </button>
+            </div>
+            <div class="col-md-3 col-xs-6">
+              <button class="btn-med btn-cancel">
+                คืนค่า
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+  
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  
+    </div>
   <div class="detail-footer-wrapper">
     <div class="row">
       <div class="col-md-12 mb-3">
