--- a/src/app/report/today-list/today-list.component.html
+++ b/src/app/report/today-list/today-list.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-3">
           <p>เลขที่ผู้ถือหน่วยลงทุน</p>
-          <div class="select-wrapper inline-block">
+          <div class="select-wrapper inline-block  pb-3">
             <select name="ddlLink" id="ddlLink">
               <option value="0" selected="">9990244757</option>
               <option value="36">9990244757</option>
@@ -43,14 +43,22 @@
           <p>วันที่ออกรายการ</p>
           <span>7 มิถุนายน 2561</span>
         </div>
-
+        <div class="col-sm-6 col-md-12">
+          <div class="row">
+            <div class="col-md-6">
+              <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+            </div>
+          </div>
+            
+        </div>
         <div class="col-md-12">
           <div class="table-responsive">
             <table class="table table-nav">
               <thead>
                   <tr>
                       <th>
-                        ช่องทาง
+                        ชื่อกองทุน
                       </th>
                       <th>
                         วันและเวลา
@@ -90,7 +98,7 @@
               <tbody>                           
                 <tr class="summary">
                   <th colspan="11">
-                    กองทุนรวมหุ้นระยะยาว
+                      9990244757
                   </th>
                 </tr>
                 <tr class="line">
@@ -101,7 +109,7 @@
                 </tr>
                 <tr>
                   <td class="text-left">
-                    NET
+                      &nbsp;
                   </td>
                   <td class="">
                     07/06/2561, 11:25
@@ -140,7 +148,7 @@
                 </tr>
                 <tr>
                   <td class="text-left">
-                    NET
+                   &nbsp;
                   </td>
                   <td class="">
                     07/06/2561, 11:25
@@ -177,11 +185,15 @@
                     </a>
                   </td>
                 </tr>
+                <!-- <tr class="summary">
+                    <th colspan="11">
+                        9990244758
+                    </th>
+                  </tr>
                 <tr class="line">
                   <td colspan="11">
                     (KFLTFSTARD) กองทุนเปิดกรุงศรีหุ้นระยะยาวไทยออลสตาร์ปันผล
                   </td>
-                  <!-- <td colspan="6">&nbsp;</td> -->
                 </tr>
                 <tr>
                   <td class="text-left">
@@ -260,7 +272,7 @@
                       <img src="/assets/Images/icons/ico-delete.png" alt="" data-toggle="modal" data-target="#disclaimer">
                     </a>
                   </td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
