--- a/src/app/rmf-ltf/conclusion/conclusion.component.html
+++ b/src/app/rmf-ltf/conclusion/conclusion.component.html
@@ -40,6 +40,11 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+
+            <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
       </div>
     </div>
   </div>
@@ -136,13 +141,13 @@
                     ประเภทหน่วยลงทุน
                   </th>
                   <th>
-                    มูลค่าการลงทุน
+                    มูลค่าต่อหน่วย
                   </th>
                   <th>
                     หน่วย
                   </th>
                   <th>
-                    มูลค่าต่อหน่วย
+                    มูลค่าการลงทุน
                   </th>
                 </tr>
           </thead>
@@ -160,13 +165,13 @@
                 DE
               </td>
               <td class="txt-right">
-                200.000
+                11.1500
               </td>
               <td class="txt-right">
                 17,055.4525
               </td>
               <td class="txt-right">
-                11.1500
+                200.000
               </td>
             </tr>
             <tr>
@@ -177,13 +182,13 @@
                 DE
               </td>
               <td class="txt-right">
-                200.000
+                11.1500
               </td>
               <td class="txt-right">
                 17,055.4525
               </td>
               <td class="txt-right">
-                11.1500
+                200.000
               </td>
             </tr>
             <tr class="summary">
@@ -191,13 +196,13 @@
                 รวม KFHCARERMF
               </th>
               <th class="text-right">
-                400.000
+                &nbsp;
               </th>
               <th class="text-right">
                 51,116.3575
               </th>
               <th class="text-right">
-                &nbsp;
+                400.000
               </th>
             </tr>
             <tr class="line">
@@ -213,13 +218,13 @@
                 DE
               </td>
               <td class="txt-right">
-                200.000
+                11.1500
               </td>
               <td class="txt-right">
                 17,055.4525
               </td>
               <td class="txt-right">
-                11.1500
+                200.000
               </td>
             </tr>
             <tr>
@@ -230,13 +235,13 @@
                 DE
               </td>
               <td class="txt-right">
-                200.000
+                11.1500
               </td>
               <td class="txt-right">
                 17,055.4525
               </td>
               <td class="txt-right">
-                11.1500
+                200.000
               </td>
             </tr>
             <tr class="summary">
@@ -244,13 +249,13 @@
                 รวม KFHCARERMF
               </th>
               <th class="text-right">
-                400.000
+                &nbsp;
               </th>
               <th class="text-right">
                 51,116.3575
               </th>
               <th class="text-right">
-                &nbsp;
+                400.000
               </th>
             </tr>
           </tbody>
