--- a/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
+++ b/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
@@ -28,7 +28,8 @@
           <p>เลขที่ผู้ถือหน่วยลงทุน</p>
           <div class="select-wrapper inline-block">
             <select name="ddlLink" id="ddlLink">
-              <option value="0" selected="">9990244757</option>
+              <option value="0" selected="" disabled>กรุณาเลือก</option>
+              <option value="1">ทั้งหมด</option>
               <option value="36">9990244757</option>
               <option value="29">9990244757</option>
             </select>
@@ -70,7 +71,12 @@
                 </th>
               </tr>
         </thead>
-        <tbody>                      
+        <tbody>
+            <tr class="topic">
+                <th colspan="11">
+                    9990244757
+                </th>
+              </tr>                     
           <tr class="line">
             <td>
               (KFLTFSTARD) กองทุนเปิดกรุงศรีหุ้นระยะยาวไทยออลสตาร์ปันผล
@@ -79,7 +85,7 @@
           </tr>
           <tr>
             <td class="text-left">
-              NET
+              &nbsp;
             </td>
             <td class="">
               07/06/2561
@@ -99,7 +105,7 @@
           </tr>
           <tr>
             <td class="text-left">
-              NET
+              &nbsp;
             </td>
             <td class="">
               07/06/2561
@@ -118,6 +124,60 @@
             </td>
           </tr>
         </tbody>
+        <tbody>
+            <tr class="topic">
+                <th colspan="11">
+                    9990244758
+                </th>
+              </tr>                     
+          <tr class="line">
+            <td>
+              (KFLTFSTARD) กองทุนเปิดกรุงศรีหุ้นระยะยาวไทยออลสตาร์ปันผล
+            </td>
+            <td colspan="6">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="text-left">
+              &nbsp;
+            </td>
+            <td class="">
+              07/06/2561
+            </td>
+            <td class="">
+              30
+            </td>
+            <td class="">
+              07/06/2561
+            </td>
+            <td class="txt-right">
+              11.1500
+            </td>
+            <td class="txt-right">
+              17,055.4525
+            </td>
+          </tr>
+          <tr>
+            <td class="text-left">
+              &nbsp;
+            </td>
+            <td class="">
+              07/06/2561
+            </td>
+            <td class="">
+              30
+            </td>
+            <td class="">
+              07/06/2561
+            </td>
+            <td class="txt-right">
+              11.1500
+            </td>
+            <td class="txt-right">
+              17,055.4525
+            </td>
+          </tr>
+        </tbody>
+        
       </table>
     </div>
   </div>
