--- a/src/app/transaction/exchange/exchange.component.html
+++ b/src/app/transaction/exchange/exchange.component.html
@@ -39,6 +39,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-md-6">
+            <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+          </div>
       </div>
     </div>
   </div>
@@ -136,11 +140,12 @@
           <div class="col-md-3 col-xs-6">
             <div class="select-wrapper inline-block">
 
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">บาท</option>
-                <option value="36">เยน</option>
-                <option value="29">ดอลล่า</option>
-              </select>
+                <select name="ddlLink" id="ddlLink">
+                    <option value="0" selected="" disabled>กรุณาเลือก</option>
+                    <option value="บาท">บาท</option>
+                    <option value="หน่วย">หน่วย</option>
+                    <option value="ทั้งหมด">ทั้งหมด</option>
+                  </select>
             </div>
           </div>
         </div>
@@ -198,10 +203,10 @@
   <div class="detail-footer-wrapper">
     <div class="row">
       <div class="col-md-6 text-left">
-        <h4>รายการสับเปลี่ยนหน่วยลงทุน <br class="d-block d-sm-none"/><span>(รายการที่รอดำเนินการ)</span></h4>
+        <h4>รายการสับเปลี่ยนหน่วยลงทุน <br class="d-block d-sm-none"/><label>(รายการที่รอดำเนินการ)</label></h4>
       </div>
       <div class="col-md-6 text-md-right">
-        <i class="fa fa-angle-right mr-1" aria-hidden="true"></i><span>ดูรายการทั้งหมด</span>
+        <i class="fa fa-angle-right mr-1" aria-hidden="true"></i><label>ดูรายการทั้งหมด</label>
       </div>
       <div class="col-md-12 mt-5 text-center">
         <p>ไม่มีรายการที่รอดำเนินงาน</p>
@@ -242,6 +247,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-md-6">
+            <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+          </div>
       </div>
     </div>
   </div>
@@ -399,6 +408,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-md-6">
+            <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+          </div>
       </div>
     </div>
   </div>
@@ -571,6 +584,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-md-6">
+            <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+          </div>
       </div>
     </div>
   </div>
