--- a/src/app/canvas-menu/canvas-menu.component.html
+++ b/src/app/canvas-menu/canvas-menu.component.html
@@ -23,11 +23,11 @@
 
     <ul id="canvas_mainnav" class="list-unstyled main-menu">
       <li id="myport"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
-      <li id="transaction"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
-      <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
-      <li id="report"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
-      <li id="regular-list"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
-      <li id="profile"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
+                                <li id="transaction"><a routerLink="/transaction" title="{{ 'HEADER.transaction' | translate }}">{{ 'HEADER.transaction' | translate }}<span class="icon"></span></a></li>
+                                <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="RMF/LTF">RMF/LTF<span class="icon"></span></a></li>
+                                <li id="report"><a routerLink="/report" title="{{ 'HEADER.report' | translate }}">{{ 'HEADER.report' | translate }}<span class="icon"></span></a></li>
+                                <li id="regular-list"><a routerLink="/regular-list" title="{{ 'HEADER.regular' | translate }} ">{{ 'HEADER.regular' | translate }} <span class="icon"></span></a></li>
+                                <li id="profile"><a routerLink="/profile" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
     </ul>
   </nav>
 
