--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,3 +13,21 @@
 input[type="text"],input[type="password"]{
     height: 42px !important;
 }
+/* form-control-feedback p{
+    color: red !important;
+} */
+.has-danger .form-control-feedback p{
+    color: #FF4A4A !important;
+    margin:  0;
+    
+}
+.form-group{
+    margin: 0;
+}
+.ui-widget-header,{
+    background-color: white;
+    background: unset;
+}
+.ui-widget{
+    font-family: "KitithadaBold" !important;
+}
