--- a/src/app/profile/suitability/suitability.component.html
+++ b/src/app/profile/suitability/suitability.component.html
@@ -953,6 +953,26 @@
                     </div>
 
                 </div>
+                <div class="col-sm-12">
+                    <div class="row mt-3 justify-content-center">
+                        <div class="col-md-2 col-xs-6">
+                            <button class="btn-med btn-primary" data-toggle="modal" data-target="#disclaimer" data-backdrop="static"
+                                data-keyboard="false">
+                                ยอมรับ
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+    
+                            </button>
+    
+                        </div>
+                        <div class="col-md-2 col-xs-6">
+                            <button class="btn-med btn-back-login" (click)="checkpage('suitability-test')">
+                                แก้ไข
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+    
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
