--- a/src/app/regular-list/regular-list.component.html
+++ b/src/app/regular-list/regular-list.component.html
@@ -13,32 +13,32 @@
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a (click)="navigate('regular-purchase')" title="รายการซื้อแบบประจำ">รายการซื้อแบบประจำ</a>
+                    <a (click)="navigate('regular-purchase')" title="{{ 'NAVBAR.regular-subscription-order' | translate }}">{{ 'NAVBAR.regular-subscription-order' | translate }}</a>
+                  </li>
+                  <!-- <li>
+                    <a (click)="navigate('regular-sell')" title="{{ 'NAVBAR.regular-redemption-order' | translate }}">{{ 'NAVBAR.regular-redemption-order' | translate }}</a>
                   </li>
                   <li>
-                    <a (click)="navigate('regular-sell')" title="รายการขายคืนแบบประจำ">รายการขายคืนแบบประจำ</a>
-                  </li>
+                    <a (click)="navigate('regular-exchange')" title="{{ 'NAVBAR.regular-switching-order' | translate }}">{{ 'NAVBAR.regular-switching-order' | translate }}</a>
+                  </li> -->
                   <li>
-                    <a (click)="navigate('regular-exchange')" title="รายการสับเปลี่ยนแบบประจำ">รายการสับเปลี่ยนแบบประจำ</a>
-                  </li>
-                  <li>
-                    <a (click)="navigate('all-list')" title="ดูรายการทั้งหมด">ดูรายการทั้งหมด</a>
+                    <a (click)="navigate('all-list')" title="{{ 'NAVBAR.view-plan' | translate }}">{{ 'NAVBAR.view-plan' | translate }}</a>
                   </li>
                 </ul>
                 <div class="clearfix"></div>
               </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu1">
-                  <a title="รายการซื้อ" (click)="navigate('regular-purchase')">รายการซื้อแบบประจำ</a>
+                  <a title="{{ 'NAVBAR.regular-subscription-order' | translate }}" (click)="navigate('regular-purchase')">{{ 'NAVBAR.regular-subscription-order' | translate }}</a>
                 </li>
-                <li role="presentation" id="menu2">
-                  <a title="รายการขาย" (click)="navigate('regular-sell')">รายการขายคืนแบบประจำ</a>
+                <!-- <li role="presentation" id="menu2">
+                  <a title="{{ 'NAVBAR.regular-redemption-order' | translate }}" (click)="navigate('regular-sell')">{{ 'NAVBAR.regular-redemption-order' | translate }}</a>
                 </li>
                 <li role="presentation" id="menu3" (click)="navigate('regular-exchange')">
-                  <a title="รายการสับเปลี่ยน">รายการสับเปลี่ยนแบบประจำ</a>
-                </li>
+                  <a title="{{ 'NAVBAR.regular-switching-order' | translate }}">{{ 'NAVBAR.regular-switching-order' | translate }}</a>
+                </li> -->
                 <li role="presentation" id="menu4" (click)="navigate('all-list')">
-                  <a title="รายการตั้งซื้อขายล่วงหน้า">ดูรายการทั้งหมด</a>
+                  <a title="{{ 'NAVBAR.view-plan' | translate }}">{{ 'NAVBAR.view-plan' | translate }}</a>
                 </li>
               </ul>
             </div>
