--- a/src/app/regular-list/regular-sell/regular-sell.component.html
+++ b/src/app/regular-list/regular-sell/regular-sell.component.html
@@ -39,6 +39,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+          <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
       </div>
     </div>
   </div>
@@ -128,11 +132,12 @@
           <div class="col-md-3 col-xs-6">
             <div class="select-wrapper inline-block">
 
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">บาท</option>
-                <option value="36">เยน</option>
-                <option value="29">ดอลล่า</option>
-              </select>
+                <select name="ddlLink" id="ddlLink">
+                    <option value="0" selected="" disabled>กรุณาเลือก</option>
+                    <option value="บาท">บาท</option>
+                    <option value="หน่วย">หน่วย</option>
+                    <option value="ทั้งหมด">ทั้งหมด</option>
+                  </select>
             </div>
           </div>
         </div>
@@ -163,15 +168,23 @@
             </div>
           </div>
           <div class="col-md-3 col-xs-6">
-            <div class="select-wrapper inline-block">
-
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">วันที่1</option>
-                <option value="36">วันที่2</option>
-                <option value="29">วันที่3</option>
-              </select>
+              <div class="row">
+                <div class="col-md-6 col-xs-6">
+                  <span>วันที่</span>
+                </div>
+                <div class="col-md-6 col-xs-6">
+                  <div class="select-wrapper inline-block">
+  
+                    <select name="ddlLink" id="ddlLink">
+                      <option value="0" selected="">1</option>
+                      <option value="36">2</option>
+                      <option value="29">3</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+  
             </div>
-          </div>
         </div>
         <div class="row">
           <div class="col-md-4">
@@ -220,12 +233,12 @@
       <div class="col-md-6 text-left">
         <h4>รายการขายคืนหน่วยลงทุน
           <br class="d-block d-sm-none" />
-          <span>(รายการที่รอดำเนินการ)</span>
+          <label>(รายการที่รอดำเนินการ)</label>
         </h4>
       </div>
       <div class="col-md-6 text-md-right">
         <i class="fa fa-angle-right mr-1" aria-hidden="true"></i>
-        <span>ดูรายการทั้งหมด</span>
+        <label>ดูรายการทั้งหมด</label>
       </div>
       <div class="col-md-12 mt-5 text-center">
         <p>ไม่มีรายการที่รอดำเนินงาน</p>
@@ -273,6 +286,10 @@
         <div class="col-md-3">
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
         </div>
       </div>
     </div>
