--- a/src/app/report/confirmation/confirmation.component.html
+++ b/src/app/report/confirmation/confirmation.component.html
@@ -26,7 +26,7 @@
         <div class="col-md-3">
 
           <p>เลขที่ผู้ถือหน่วยลงทุน</p>
-          <div class="select-wrapper inline-block">
+          <div class="select-wrapper inline-block ">
             <select name="ddlLink" id="ddlLink">
               <option value="0" selected="">9990244757</option>
               <option value="36">9990244757</option>
@@ -38,6 +38,10 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+            <p>ที่อยู่</p>
+          <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+          </div>
       </div>
     </div>
   </div>
