--- a/src/app/rmf-ltf/certificate-rmf/certificate-rmf.component.html
+++ b/src/app/rmf-ltf/certificate-rmf/certificate-rmf.component.html
@@ -38,6 +38,11 @@
           <p>ชื่อผู้ถือหน่วยลงทุน</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
+        <div class="col-sm-6 col-md-6">
+
+            <p>ที่อยู่</p>
+            <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+        </div>
         <!-- <div class="col-md-4">
           <p>วันที่ทำรายงาน</p>
           <span>7 มิถุนายน 2561</span>                      
