--- a/src/app/rmf-ltf/rmf-ltf.component.html
+++ b/src/app/rmf-ltf/rmf-ltf.component.html
@@ -12,32 +12,32 @@
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a (click)="navigate('ltf-condition-complete')" title="หน่วยลงทุน LTF ที่ครบตามเงื่อนไข">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                    <a (click)="navigate('ltf-condition-complete')" title="{{ 'NAVBAR.ltf-for-re' | translate }}">{{ 'NAVBAR.ltf-for-re' | translate }}</a>
                   </li>
                   <li>
-                    <a (click)="navigate('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                    <a (click)="navigate('conclusion')" title="{{ 'NAVBAR.rmf-ltf-sub' | translate }}">{{ 'NAVBAR.rmf-ltf-sub' | translate }}</a>
                   </li>
                   <li>
-                    <a (click)="navigate('certificate-rmf')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                    <a (click)="navigate('certificate-rmf')" title="{{ 'NAVBAR.rmf-cer' | translate }}">{{ 'NAVBAR.rmf-cer' | translate }}</a>
                   </li>
                   <li>
-                    <a (click)="navigate('certificate-ltf')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                    <a (click)="navigate('certificate-ltf')" title="{{ 'NAVBAR.ltf-cer' | translate }}">{{ 'NAVBAR.ltf-cer' | translate }}</a>
                   </li>
                 </ul>
                 <div class="clearfix"></div>
               </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu1">
-                  <a title="รายการซื้อ" (click)="navigate('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                  <a title="{{ 'NAVBAR.ltf-for-re' | translate }}" (click)="navigate('ltf-condition-complete')">{{ 'NAVBAR.ltf-for-re' | translate }}</a>
                 </li>
                 <li role="presentation" id="menu2">
-                  <a title="รายการขาย" (click)="navigate('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                  <a title="{{ 'NAVBAR.rmf-ltf-sub' | translate }}" (click)="navigate('conclusion')">{{ 'NAVBAR.rmf-ltf-sub' | translate }}</a>
                 </li>
                 <li role="presentation" id="menu3">
-                  <a title="รายการสับเปลี่ยน" (click)="navigate('certificate-rmf')">หนังสือรับรองฯ RMF</a>
+                  <a title="{{ 'NAVBAR.rmf-cer' | translate }}" (click)="navigate('certificate-rmf')">{{ 'NAVBAR.rmf-cer' | translate }}</a>
                 </li>
                 <li role="presentation" id="menu4">
-                  <a title="รายการตั้งซื้อขายล่วงหน้า" (click)="navigate('certificate-ltf')">หนังสือรับรองฯ LTF</a>
+                  <a title="{{ 'NAVBAR.ltf-cer' | translate }}" (click)="navigate('certificate-ltf')">{{ 'NAVBAR.ltf-cer' | translate }}</a>
                 </li>
 
               </ul>
