--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -95,6 +95,41 @@ if it's not present, don't show loader */
     background-color: #f5f5f5;
     color: $color-primary;
 }
+.ui-widget-header{
+    background-color: white;
+    background: unset;
+}
+
+.ui-widget{
+    font-family: "KitithadaBold" !important;
+}
+.ui-widget-content{
+    background: unset;
+    background-color: white;
+    border: 1px solid #ffffff;
+}
+.ui-dialog .ui-dialog-titlebar-icon{
+    display:none;
+}
+
+ .ui-dialog-title {
+    color: $color-hover;
+    font-size: 40px !important;
+    line-height: 40px;
+    float: left;
+    max-width: 90%;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    text-transform: uppercase;
+}
+.ui-dialog-content{
+    font-size: 22px;
+    line-height: 28px;
+    color: $color-text;
+}     
+        
+            
+
 
 #header-wrapper {
     width: 100%;
@@ -120,6 +155,20 @@ input[type="text"] {
     font-family: $default-font;
     width: 100%;
     height: 40px;
+    margin: 0 auto;
+    padding: 8px 10px 7px 10px;
+    border: 1px solid $color-little-gray;
+    font-size: $text-content;
+
+    @media screen and (max-width: $screen-sm-max) {
+        /*height: 48px;*/
+        /*margin-bottom: 15px;*/
+    }
+}
+input[type="number"] {
+    font-family: $default-font;
+    width: 100%;
+    height: 42px;
     margin: 0 auto;
     padding: 8px 10px 7px 10px;
     border: 1px solid $color-little-gray;
@@ -242,10 +291,18 @@ input[type=reset] {
         color: $color-white;
         border: 1px solid $color-primary;
         background-color: $color-primary;
-
+        box-shadow: unset;
         &:hover {
             border: 1px solid $color-hover;
             background-color: $color-hover;
+        }
+        &:focus{
+            border: none;
+            outline: none;
+        }
+        &:active{
+            border: none;
+            outline: none;
         }
     }
 
@@ -698,6 +755,28 @@ input[type=reset] {
                             }
                         }
                     }
+                    &.topic {
+                        th {
+                            padding: 15px 10px;
+                            font-size: $text-x-small;
+                            line-height: $text-x-small;
+                            font-weight: normal;
+                            // border: none;
+                            text-align: left;
+                            color: $color-primary;
+                            // border-top: 2px solid #f5f5f5;
+                            // border-bottom: 2px solid #f5f5f5;
+                            background-color: transparent;
+                            
+
+                            &.custom-label {
+                                border: unset;
+                                text-align: right;
+                                color: $color-white;
+                                background-color: $color-primary;
+                            }
+                        }
+                    }
                 }
                 tr {
                     &.line {
@@ -731,11 +810,30 @@ input[type=reset] {
                         border: none;
                         text-align: center;
                         border-right: 1px solid $color-white;
-                        background-color: $color-title;
+                        background-color: $color-text;
+                        color: $color-white;
 
                         &.first-th {
                             border-bottom: 1px solid $color-white;
                             background-color: #adadad;
+                        }
+                    }
+                    &.captions {
+                        > td {
+                            padding: 20px 0px;
+                            text-align: left;
+
+                            h3 {
+                                margin: 0;
+                                font-size: $text-small;
+                                line-height: $text-small;
+                                color: $color-primary;
+                            }
+
+                            p {
+                                margin: 0;
+                                color: $color-primary;
+                            }
                         }
                     }
                 }
