--- a/src/assets/Content/default/sass/layout/_header.scss
+++ b/src/assets/Content/default/sass/layout/_header.scss
@@ -39,7 +39,7 @@
         background-color: $color-primary;
 
         .wrapper {
-            max-width: 1280px;
+            // max-width: 1280px;
             margin: 0 auto;
         }
 
@@ -146,6 +146,7 @@
 
         .top-social-nav {
             text-align: right;
+            padding-right: 25px;
 
             ul {
                 display: inline-block;
@@ -157,6 +158,7 @@
                     display: inline-block;
                     padding: 10px 0;
                     margin: 0 5px;
+                    cursor: pointer;
 
                     a {
                         font-size: $text-content;
@@ -219,13 +221,13 @@
         box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.5);
 
         .wrapper {
-            max-width: 1280px;
+            // max-width: 1280px;
             padding: 0;
             margin: 0 auto;
         }
 
         .logo {
-            margin: 0;
+            margin: 0 20px;
         }
         
         .main-nav {
@@ -661,7 +663,7 @@
             box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.5);
     
             .wrapper {
-                max-width: 1440px;
+                // max-width: 1440px;
                 padding: 0;
                 margin: 0 auto;
             }
